--- a/vvit/index.html
+++ b/vvit/index.html
@@ -298,6 +298,7 @@
         BIADA Industrial Growth Center<br/>
         Maranga, NH-31 Purnea, <br/>Bihar 854301<br/>
         <i class="bi bi-telephone"></i> : +91-7781005263<br/>
+        <i class="bi bi-telephone"></i> : +91-8448448730<br/>
         <i class="bi bi-envelope-fill"></i>  vidyaviharit@gmail.com
       </p>
       <h4>follow us :</h4>
