--- a/vvit/contact.html
+++ b/vvit/contact.html
@@ -145,7 +145,13 @@
         </div>
         <div class="col-md-5 mt-5">
           <h3 class="mb-4">Address</h3>
-          <p>Vidya Vihar Institute of Technology<br/>Maranga, Purnea, 854301 <br/> <i class="bi bi-telephone"></i>: +91-7781005263</p>
+          <p><i class="bi bi-globe2"></i>
+          BIADA Industrial Growth Center<br/>
+        Maranga, NH-31 Purnea, <br/>Bihar 854301<br/>
+        <i class="bi bi-telephone"></i> : +91-7781005263<br/>
+        <i class="bi bi-telephone"></i> : +91-8448448730<br/>
+        <i class="bi bi-envelope-fill"></i>  vidyaviharit@gmail.com
+          </p>
    
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1600.8917694227798!2d87.46029643164242!3d25.741468102820775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eff956132e5fe7%3A0x8837d898824e7186!2sVidya%20Vihar%20Institute%20of%20Technology!5e0!3m2!1sen!2sin!4v1654083833122!5m2!1sen!2sin" style="width: 100%;" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    
@@ -174,9 +180,12 @@
     <div class="col-md-3 pt-4">
       <h5 class="pb-2">Contact Us</h5>
       <p>
-        vidya vihar Institute of Technology<br>
-        Maranga, Purnea, 854301<br>
-        <i class="bi bi-telephone"></i> : +91-7781005263
+        <i class="bi bi-globe2"></i>
+          BIADA Industrial Growth Center<br/>
+        Maranga, NH-31 Purnea, <br/>Bihar 854301<br/>
+        <i class="bi bi-telephone"></i> : +91-7781005263<br/>
+        <i class="bi bi-telephone"></i> : +91-8448448730<br/>
+        <i class="bi bi-envelope-fill"></i>  vidyaviharit@gmail.com
       </p>
       <h4>follow us :</h4>
       <ul class="socials">
